replaced screenshot for a better one that fits the ratio better as well as fixing spacing for styling to make background look aestheitc.

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    background: var (--bg-color);
+    background: var(--bg-color);
     color: var(--primary-color);
     min-height: 100vh;
     display: flex;
@@ -53,6 +53,7 @@ nav {
 
 nav a {
     cursor: pointer;
+    text-decoration: none;
 }
 
 nav a:hover {
@@ -93,7 +94,9 @@ section {
 .imgContainer img {
     width: 100%;
     aspect-ratio: 1/1;
+    height: auto;
     object-fit:cover;
+    max-width: 100px;
 }
 
 .stats {
@@ -102,11 +105,11 @@ section {
     gap: 14px;
 }
 
-.stats > div {
+.stats>div {
     flex: 1;
     display: flex;
     align-items: center;
-    gap: 14px;
+    gap: 8px;
 }
 
 .stats div i {
@@ -121,4 +124,94 @@ section {
 
 .aboutMe {
     line-height: 1.5em;
+}
+
+.outreach {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    cursor: pointer;
+    width: fit-content;
+    margin-right: auto;
+}
+
+.outreach:hover {
+    opacity: 0.7;
+}
+
+.outreach i {
+    transform: rotate(-45deg);
+}
+.projectContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+.headerText {
+    margin-bottom: 24px;
+}
+
+.projectItem {
+    display: flex;
+    align-items: stretch;
+    gap: 24px;
+}
+
+.projectItem div:first-child {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    flex: 1;
+}
+
+.projectItem>div:last-child {
+    aspect-ratio: 16/9;
+    max-width: 30%;
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.projectItem>div:last-child img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.linkContainer {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.linkItem {
+    display: flex;
+    flex-direction: row !important;
+    align-items: center;
+    gap: 14px !important;
+    color: var(--primary-color);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.linkItem:hover {
+    opacity: 0.7;
+}
+
+.linkItem p {
+    font-size: 0.9em;
+}
+
+@media (min-width: 640px) {
+    .statsContainer {
+        flex-direction: row;
+    }
+    
+    .stats {
+        gap: 0px;
+    }
+    .aboutMe {
+        width: 80%;
+        margin-right: auto;
+    }
 }
